Revise developer documentation and project structure for Biasbuster. Update DEVELOPER.md to enhance clarity on project setup, development workflow, and contributing guidelines. Improve FLOWCHART.md to provide a clearer visualization of the system architecture. Update README.md to reflect project features and add links to relevant documentation. Modify package.json to include new dependencies and scripts for testing and linting. Enhance Chrome extension icons and service worker for better functionality and user experience.

--- a/web-platform/judge-dashboard.html
+++ b/web-platform/judge-dashboard.html
@@ -238,7 +238,7 @@
     <header>
         <div class="container">
             <div class="logo">
-                <img src="assets/logo.png" alt="Biasbuster Logo">
+                <img src="assets/logo.svg" alt="Biasbuster Logo">
                 <div>
                     <h1>Biasbuster</h1>
                     <div class="tagline">AI-Powered Media Literacy Tool</div>
@@ -252,9 +252,10 @@
                     <i class="fas fa-times"></i>
                 </button>
                 <a href="index.html">Home</a>
-                <a href="index.html#demo">Demo</a>
                 <a href="ai-literacy.html">AI Literacy Hub</a>
+                <a href="media-literacy.html">Media Literacy</a>
                 <a href="ethics-committee.html">Ethics Committee</a>
+                <a href="judge-dashboard.html" class="active">Judge's Dashboard</a>
                 <a href="about.html">About</a>
                 <a href="pricing.html">Pricing</a>
                 <a href="documentation.html">Documentation</a>
@@ -673,7 +674,7 @@
             <div class="footer-container">
                 <div>
                     <div class="footer-logo">
-                        <img src="assets/logo.png" alt="Biasbuster Logo" width="40">
+                        <img src="assets/logo.svg" alt="Biasbuster Logo" width="40">
                         <span>Biasbuster</span>
                     </div>
                     <p class="footer-description">
@@ -736,6 +737,24 @@
             </div>
         </div>
     </footer>
+
+    <!-- Global Footer -->
+    <div class="global-footer">
+        <div class="global-footer-content">
+            <a href="https://github.com/amarzeus/" target="_blank" rel="noopener noreferrer" class="github-link">
+                <i class="fab fa-github github-icon"></i>
+                <span>GitHub</span>
+            </a>
+            <div class="heart-text">
+                Made with <i class="fas fa-heart heart-icon"></i> by 
+                <a href="https://www.linkedin.com/in/amarmahakal/" target="_blank" rel="noopener noreferrer" class="linkedin-link">Amar</a>
+            </div>
+            <a href="https://buymeacoffee.com/amarmahakal" target="_blank" rel="noopener noreferrer" class="buy-coffee-link">
+                <i class="fas fa-coffee coffee-icon"></i>
+                <span>Buy me a coffee</span>
+            </a>
+        </div>
+    </div>
 
     <script src="script.js"></script>
     <script>
