--- a/web-platform/ethics-committee.html
+++ b/web-platform/ethics-committee.html
@@ -238,7 +238,7 @@
     <header>
         <div class="container">
             <div class="logo">
-                <img src="assets/logo.png" alt="Biasbuster Logo">
+                <img src="assets/logo.svg" alt="Biasbuster Logo">
                 <div>
                     <h1>Biasbuster</h1>
                     <div class="tagline">AI-Powered Media Literacy Tool</div>
@@ -252,8 +252,8 @@
                     <i class="fas fa-times"></i>
                 </button>
                 <a href="index.html">Home</a>
-                <a href="index.html#demo">Demo</a>
                 <a href="ai-literacy.html">AI Literacy Hub</a>
+                <a href="media-literacy.html">Media Literacy</a>
                 <a href="ethics-committee.html" class="active">Ethics Committee</a>
                 <a href="about.html">About</a>
                 <a href="pricing.html">Pricing</a>
@@ -287,7 +287,7 @@
                 <p>Whether you're a student, educator, AI professional, or concerned citizen, your perspective matters in this ongoing dialogue about the ethical dimensions of artificial intelligence.</p>
             </div>
             <div class="committee-image">
-                <img src="https://placehold.co/600x400" alt="Ethics Committee Meeting" id="committee-image">
+                <img src="assets/detailed-workflow.svg" alt="Ethics Committee Meeting" id="committee-image">
             </div>
         </section>
         
@@ -400,7 +400,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-logo">
-                    <img src="assets/logo.png" alt="Biasbuster Logo">
+                    <img src="assets/logo.svg" alt="Biasbuster Logo">
                     <h3>Biasbuster</h3>
                     <p>AI-Powered Media Literacy Tool</p>
                 </div>
@@ -437,6 +437,24 @@
             </div>
         </div>
     </footer>
+
+    <!-- Global Footer -->
+    <div class="global-footer">
+        <div class="global-footer-content">
+            <a href="https://github.com/amarzeus/" target="_blank" rel="noopener noreferrer" class="github-link">
+                <i class="fab fa-github github-icon"></i>
+                <span>GitHub</span>
+            </a>
+            <div class="heart-text">
+                Made with <i class="fas fa-heart heart-icon"></i> by 
+                <a href="https://www.linkedin.com/in/amarmahakal/" target="_blank" rel="noopener noreferrer" class="linkedin-link">Amar</a>
+            </div>
+            <a href="https://buymeacoffee.com/amarmahakal" target="_blank" rel="noopener noreferrer" class="buy-coffee-link">
+                <i class="fas fa-coffee coffee-icon"></i>
+                <span>Buy me a coffee</span>
+            </a>
+        </div>
+    </div>
 
     <script src="script.js"></script>
     <script>
