--- a/web-platform/index.html
+++ b/web-platform/index.html
@@ -14,7 +14,7 @@
     <header>
         <div class="container">
             <div class="logo">
-                <img src="assets/logo.png" alt="Biasbuster Logo">
+                <img src="assets/logo.svg" alt="Biasbuster Logo">
                 <div>
                     <h1>Biasbuster</h1>
                     <div class="tagline">AI-Powered Media Literacy Tool</div>
@@ -30,6 +30,7 @@
                 <a href="index.html" class="active">Home</a>
                 <a href="#demo">Demo</a>
                 <a href="ai-literacy.html">AI Literacy Hub</a>
+                <a href="media-literacy.html">Media Literacy</a>
                 <a href="ethics-committee.html">Ethics Committee</a>
                 <a href="about.html">About</a>
                 <a href="pricing.html">Pricing</a>
@@ -270,7 +271,7 @@
             <div class="footer-container">
                 <div>
                     <div class="footer-logo">
-                        <img src="assets/logo.png" alt="Biasbuster Logo" width="40">
+                        <img src="assets/logo.svg" alt="Biasbuster Logo" width="40">
                         <span>Biasbuster</span>
                     </div>
                     <p class="footer-description">
@@ -307,6 +308,7 @@
                     <ul class="footer-links">
                         <li><a href="documentation.html">Documentation</a></li>
                         <li><a href="ai-literacy.html">AI Literacy Hub</a></li>
+                        <li><a href="media-literacy.html">Media Literacy</a></li>
                         <li><a href="ethics-committee.html">Ethics Committee</a></li>
                         <li><a href="support.html">Support</a></li>
                     </ul>
@@ -333,6 +335,24 @@
             </div>
         </div>
     </footer>
+
+    <!-- Global Footer -->
+    <div class="global-footer">
+        <div class="global-footer-content">
+            <a href="https://github.com/amarzeus/" target="_blank" rel="noopener noreferrer" class="github-link">
+                <i class="fab fa-github github-icon"></i>
+                <span>GitHub</span>
+            </a>
+            <div class="heart-text">
+                Made with <i class="fas fa-heart heart-icon"></i> by 
+                <a href="https://www.linkedin.com/in/amarmahakal/" target="_blank" rel="noopener noreferrer" class="linkedin-link">Amar</a>
+            </div>
+            <a href="https://buymeacoffee.com/amarmahakal" target="_blank" rel="noopener noreferrer" class="buy-coffee-link">
+                <i class="fas fa-coffee coffee-icon"></i>
+                <span>Buy me a coffee</span>
+            </a>
+        </div>
+    </div>
 
     <script src="script.js"></script>
     <script>
